prometheus-kubernetes/manifests/grafana/grafana.de.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - env:
        - name: SMTP_USERNAME
          valueFrom:
            secretKeyRef:
              key: smtp-user
              name: grafana-config-ini
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: smtp-password
              name: grafana-config-ini
        - name: SMTP_HOST
          valueFrom:
            secretKeyRef:
              key: smtp-host
              name: grafana-config-ini
        - name: SMTP_PORT
          valueFrom:
            secretKeyRef:
              key: smtp-port
              name: grafana-config-ini
        - name: FROM_EMAIL
          valueFrom:
            secretKeyRef:
              key: from-email
              name: grafana-config-ini
        - name: GRAFANA_URL
          valueFrom:
            secretKeyRef:
              key: grafana_url
              name: grafana-config-ini      
        image: grafana/grafana:6.6.0
        name: grafana
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 3000
            scheme: HTTP          
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          subPath: grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-cluster-rsrc-use
          name: grafana-dashboard-k8s-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-node-rsrc-use
          name: grafana-dashboard-k8s-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
          name: grafana-dashboard-k8s-resources-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
          name: grafana-dashboard-k8s-resources-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
          name: grafana-dashboard-k8s-resources-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes
          name: grafana-dashboard-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/pods
          name: grafana-dashboard-pods
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/statefulset
          name: grafana-dashboard-statefulset
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/deployments
          name: grafana-dashboard-deployments
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-cluster-usage
          name: grafana-dashboard-k8s-cluster-usage
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config-map          
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 472
      serviceAccountName: grafana
      volumes:
      - persistentVolumeClaim:
          claimName: grafana-storage
        name: grafana-storage
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - configMap:
          name: grafana-dashboard-k8s-cluster-rsrc-use
        name: grafana-dashboard-k8s-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-k8s-node-rsrc-use
        name: grafana-dashboard-k8s-node-rsrc-use
      - configMap:
          name: grafana-dashboard-k8s-resources-cluster
        name: grafana-dashboard-k8s-resources-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-pod
        name: grafana-dashboard-k8s-resources-pod
      - configMap:
          name: grafana-dashboard-nodes
        name: grafana-dashboard-nodes
      - configMap:
          name: grafana-dashboard-pods
        name: grafana-dashboard-pods
      - configMap:
          name: grafana-dashboard-statefulset
        name: grafana-dashboard-statefulset
      - configMap:
          name: grafana-dashboard-deployments
        name: grafana-dashboard-deployments
      - configMap:
          name: grafana-dashboard-k8s-cluster-usage
        name: grafana-dashboard-k8s-cluster-usage
      - configMap:
          defaultMode: 511
          name: grafana-config-map
        name: grafana-config-map
